[gd_scene load_steps=5 format=3 uid="uid://byveysu48hdxp"]

[ext_resource type="Script" uid="uid://dac6du21be3l3" path="res://Scenes/Screens/game_stats.gd" id="1_ex7ht"]
[ext_resource type="Texture2D" uid="uid://bhroee8fvn8x5" path="res://icon.svg" id="2_qe60g"]
[ext_resource type="PackedScene" uid="uid://ddykwkghj261c" path="res://Scenes/Graph2D/graph2D.tscn" id="3_gc528"]

[sub_resource type="LabelSettings" id="LabelSettings_qe60g"]
font_size = 45

[node name="GameStats" type="Control"]
layout_mode = 3
anchor_top = 0.0597222
anchor_right = 0.785417
anchor_bottom = 0.877778
offset_left = 39.0
offset_top = 22.0
offset_right = 39.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_ex7ht")
metadata/_edit_use_anchors_ = true

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.882353)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qe60g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 27.0
offset_bottom = 160.0
grow_horizontal = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "STATS"
label_settings = SubResource("LabelSettings_qe60g")
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
current_tab = 1

[node name="ScoreTable" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/ScoreTable"]
custom_minimum_size = Vector2(0, 343)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreTableGrid" type="GridContainer" parent="VBoxContainer/TabContainer/ScoreTable/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphScore" parent="VBoxContainer/TabContainer" instance=ExtResource("3_gc528")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UndoButton" type="Button" parent="VBoxContainer"]
modulate = Color(1, 0.613905, 0.557101, 1)
layout_mode = 2
size_flags_vertical = 3
text = "Annuler dernier score"

[connection signal="pressed" from="VBoxContainer/UndoButton" to="." method="_on_undo_button_pressed"]
